# C-ourier

./: CMakeLists.txt  README.md  seeder
includes/: auth.h  entity.h  helper.h  package.h
src/: main.c
src/auth/: auth.data.c  auth.service.c
src/helper/: helper.c
src/migrator/: migrator.c  seeder.c
src/package/: package.core.c  package.data.c  package.service.c
